2013-12-25  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-play.el: Use NOERROR option of require funciton instead of
	condition-case.

	* mime-shr.el: Likewise.

	* mime-w3.el: Likewise.

2013-12-20  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-display-multipart/pgp-encrypted): Adapt for
	the last change of mime-view.el.

	* mime-signature.el (mime-edit-default-signature): Check
	mail-signature contains separator.

2013-10-06  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-view-multipart/related-show-all-children):
	Renamed from mime-view-multipart-show-all-children.
	(mime-display-multipart/related): Likewise.

2013-10-06  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-content-types): Add entry for text/vcard.
	(mime-file-types): Add entry for .vcf file.

	* semi-setup.el: Define previewer for text/vcard part as well as
	text/x-vcard.

	* mime-vcard.el (mime-display-text/vcard-hook): Renamed from
	mime-display-text/x-vcard-hook.  Define explicitly.
	(mime-display-text/vcard): Renamed from mime-display-text/x-vcard.

2013-07-20  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-verify-application/*-signature)
	(mime-decrypt-application/pgp-encrypted): pass string to
	epa-display-info function.  This is the fix for the change of
	2012-10-06.

2013-06-09  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-verify-application/*-signature-internal)
	(mime-verify-application/*-signature)
	(mime-preview-application/*-signature): Avoid signaling error when
	protocol parameter of Contetn-Type header is incorrect or missing.

2013-02-11  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* SEMI-ELS (semi-modules-to-compile): Add mime-signature.el.

	* mime-edit.el: Do not require signature.el
	(mime-edit-insert-signature): Moved to mime-signature.el and
	define atuload for it.

	* mime-signature.el: New file.

	* semi-setup.el (mime-setup-use-signature): Now nil is default.

2012-12-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
