@@ -1,3 +1,7 @@
+2014-01-10  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-image.el: Check image feature's availability statically.
+
 2013-12-25  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mime-play.el: Use NOERROR option of require funciton instead of
